# SNRawDataProducts

./: CMakeLists.txt  README.md  SNemoRawDataObjConfig.cmake.in  setupSNRawDataProducts.C.in  setupSNemoRawDataObj.C.in  snfee2snrdp  snfee2snrdp.txt
documentation/: CMakeLists.txt
examples/: CMakeLists.txt  README.md  rtd2asroot.cxx  rtd2brio.cxx
not_data/: calo_channel_traits-serial.h  calo_channel_traits.cc  calo_channel_traits.h  calo_signal_model.cc  calo_signal_model.h  calo_waveform_data-serial.h  calo_waveform_data.cc  calo_waveform_data.h  calo_waveform_drawer.cc  calo_waveform_drawer.h  channel_id_selection.cc  channel_id_selection.h  rtd_selection.cc
programs/: CMakeLists.txt  crd2rhd.cxx  rhd2rtd.cxx  rtd2root.cxx
programs/crd2rhd/: CMakeLists.txt  calo_hit_parser.cc  calo_hit_parser.h  crd2rhd.cxx  raw_hit_reader.cc  raw_hit_reader.h  raw_record_parser.cc  raw_record_parser.h  raw_run_header.cc  raw_run_header.h  tracker_hit_parser.cc  tracker_hit_parser.h
programs/librecord/: CMakeLists.txt  red_record.cc  red_record.h  rhd_record.cc  rhd_record.h  rtd_record.cc  rtd_record.h
programs/rhd2root/: CMakeLists.txt  rhd2root.cxx
programs/rhd2rtd/: CMakeLists.txt  builder.cc  builder.h  builder_config.cc  builder_config.h  raw_record_flow_statistics.cc  raw_record_flow_statistics.h  rhd2rtd.cxx  rhd_record.cc  rhd_record.h  rhd_sorter.cc  rhd_sorter.h  rtd_record.cc  rtd_record.h
programs/rtd2brio/: CMakeLists.txt  rtd2brio.cxx
programs/rtd2red/: CMakeLists.txt  builder.cc  builder.h  builder_config.cc  builder_config.h  builder_pimpl.h  input_worker.cc  input_worker.h  output_worker.cc  output_worker.h  red_buffer.cc  red_buffer.h  red_record.cc  red_record.h  rtd2red.cxx  rtd2red_builder.cc  rtd2red_builder.h  rtd_buffer.cc  rtd_buffer.h
programs/rtd2red/redb/: rtd_buffer.h
programs/rtd2root/: CMakeLists.txt  rtd2root.cxx  rtd2root_converter.cc  rtd2root_converter.h  rtd2root_data.cc  rtd2root_data.h  rtd_selection.cc  rtd_selection.h
snfee/: boost_dict.cc  geometry.h  root_dict_linkdef.h  utils.cc  utils.h
snfee/data/: RRawTriggerData-serial.h  RRawTriggerData.cc  RRawTriggerData.h  calo_channel_traits.cc  calo_hit_record-serial.h  calo_hit_record.cc  calo_hit_record.h  channel_id-serial.h  channel_id.cc  channel_id.h  has_trigger_id_interface.h  raw_event_data-serial.h  raw_event_data.cc  raw_event_data.h  raw_record_interface.h  raw_trigger_data-serial.h  raw_trigger_data.cc  raw_trigger_data.h  rtd2root_data.cc  rtdReformater.cc  rtdReformater.h  rtd_selection.h  run_info-serial.h  run_info.cc  run_info.h  time-serial.h  time.cc  time.h  tracker_hit_record-serial.h  tracker_hit_record.cc  tracker_hit_record.h  trigger_record-serial.h  trigger_record.cc  trigger_record.h  utils.cc  utils.h
snfee/elsewhere/: calo_waveform_data.h  channel_id_selection.cc
snfee/io/: calo_hit_parser.h  io_interfaces.h  multifile_data_reader.cc  multifile_data_reader.h  multifile_data_writer.cc  multifile_data_writer.h  raw_hit_reader.cc  raw_record_parser.h  raw_run_header.h  rhd_record.cc  rhd_record.h  rhd_sorter.cc  rtd2root_converter.cc  rtd2root_converter.h  rtd_record.cc  rtd_record.h  tracker_hit_parser.h
snfee/model/: feb_constants.cc  feb_constants.h  utils.cc  utils.h
snfee/rtdb/: builder.h  builder_config.cc
vendor_snfee/: geometry.h  snfee.cc.in  snfee_version.cc  snfee_version.h.in
vendor_snfee/apps/: CMakeLists.txt
vendor_snfee/apps/CBD2RHD/: CMakeLists.txt  README.rst  calo_convertor.cc  calo_convertor.h  cbd2rhd.cxx  tracker_convertor.cc  tracker_convertor.h  trigger_convertor.cc  trigger_convertor.h
vendor_snfee/apps/CBD2RHD/validation/: README.rst  proc.bash
vendor_snfee/apps/CRD2RHD/: CMakeLists.txt  README.rst  crd2rhd.cxx
vendor_snfee/apps/RHD2RTD/: CMakeLists.txt  README.rst  rhd2rtd.cxx
vendor_snfee/apps/RHDSort/: CMakeLists.txt  README.rst  rhdsort.cxx
vendor_snfee/apps/RHDSort/validation/: GNUmakefile  README.rst  run.bash
vendor_snfee/apps/RHDSort/validation/results/: eval.gp  run-104-evaluation.report  run-104-sort.report  run-121-evaluation.report
vendor_snfee/apps/RTD2RED/: CMakeLists.txt  README.rst  rtd2red.cxx
vendor_snfee/apps/RTD2Root/: CMakeLists.txt  README.rst
vendor_snfee/data/: calo_channel_traits.cc  calo_channel_traits.h  calo_hit_record-serial.h  calo_hit_record.cc  calo_hit_record.h  calo_signal_model.cc  calo_signal_model.h  calo_waveform_data-serial.h  calo_waveform_data.cc  calo_waveform_drawer.cc  calo_waveform_drawer.h  channel_id.cc  channel_id.h  has_trigger_id_interface.h  raw_event_data-serial.h  raw_event_data.cc  raw_event_data.h  raw_record_interface.h  raw_trigger_data.cc  rtd2root_data.cc  rtd2root_data.h  rtd_selection.cc  run_info-serial.h  run_info.cc  time-serial.h  time.cc  time.h  tracker_hit_record-serial.h  tracker_hit_record.cc  tracker_hit_record.h  trigger_record-serial.h  trigger_record.cc  trigger_record.h  utils.cc  utils.h
vendor_snfee/io/: calo_hit_parser.cc  calo_hit_parser.h  io_interfaces.h  raw_hit_reader.h  raw_record_flow_statistics.cc  raw_record_flow_statistics.h  raw_record_parser.cc  raw_record_parser.h  raw_run_header.cc  red_record.cc  red_record.h  rhd_sorter.cc  rhd_sorter.h  rtd2root_converter.cc  rtd2root_converter.h  rtd_record.cc  rtd_record.h  tracker_hit_parser.cc
vendor_snfee/model/: base_board.cc  base_board.h  base_firmware.cc  base_firmware.h  board_builder.cc  board_builder.h  calorimeter_fe_board.cc  calorimeter_fe_board.h  control_board.cc  control_board.h  crate.cc  crate.h  crate_builder.cc  crate_builder.h  fee_service.cc  fee_service.h  firmware_builder.cc  firmware_builder.h  fpga.cc  fpga.h  fpga_builder.cc  fpga_builder.h  register_description.cc  register_description.h  setup.cc  setup.h  setup_builder.cc  setup_builder.h  tb_firmware.cc  tb_firmware.h  tracker_fe_board.cc  tracker_fe_board.h  trigger_board.cc  trigger_board.h
vendor_snfee/redb/: builder.cc  builder.h  builder_config.cc  builder_config.h  builder_pimpl.h  input_worker.cc  input_worker.h  output_worker.cc  output_worker.h  red_buffer.cc  red_buffer.h  (+4 more)
(+3 files in other folders)
